<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">PMC - SBUS</string>
    <string name="title_activity_pmc">Phone Management Component</string>
    <string name="map_button_text">Map</string>
    <string name="map_local_button_text">Local Map</string>
    <string name="rdc_button_text">Register RDC</string>
    <string name="rdc_address">192.168.0.3:50123</string>
    <string name="rdc_label">RDC Address:</string>

</resources>